[package]
name = "chat-api-mock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-rt = "2.9.0"
actix-web = "4.4.0"
bytes = "1.5.0"
env_logger = "0.11.0"
futures = "0.3.28"
log = "0.4.20"
serde = "1.0.188"
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["rt", "macros"] }
url = "2.4.1"
utoipa = { version = "4.0.0", features = ["actix_extras"] }
utoipa-redoc = { version = "3.0.0", features = ["actix-web"] }
